--- a/playbooks/roles/jenkins_common/defaults/main.yml
+++ b/playbooks/roles/jenkins_common/defaults/main.yml
@@ -180,3 +180,21 @@ JENKINS_MAILER_SMTP_AUTH_PASSWORD: ''
 # mask passwords
 JENKINS_MASK_PASSWORDS_CLASSES: []
 JENKINS_MASK_PASSWORDS_PAIRS: []
+
+# splunk
+jenkins_common_splunk_enabled: true
+JENKINS_SPLUNK_HOSTNAME: ''
+JENKINS_SPLUNK_PORT: 8088
+jenkins_common_splunk_use_ssl: true
+JENKINS_SPLUNK_TOKEN: ''
+jenkins_common_splunk_raw_events_enabled: true
+jenkins_common_splunk_batch_size: 4096
+JENKINS_SPLUNK_APP_URL: ''
+jenkins_common_splunk_retries: 3
+jenkins_common_splunk_ignored_jobs: ''
+jenkins_common_splunk_script_type: 'path'
+jenkins_common_splunk_script_path: ''
+jenkins_commmon_splunk_metadata:
+    - metadata.data_source: 'Default'
+      metadata.config_item: 'Source Type'
+      metadata.value: 'json:jenkins:old'
